# aerial_player_cli

./: .gitignore  aerial.py  commandsd.txt
aerial_player_cpp/: CMakeLists.txt  build_cli.bat  build_qt.bat  build_static.bat  make_build.bat  run_aerialDJ.ps1  run_player.ps1  vcpkg.json
aerial_player_cpp/src/: Config.cpp  Player.cpp  Player.hpp  Playlist.cpp  Playlist.hpp  UI.cpp  UI.hpp  config.json  json.hpp  main.cpp  server.cpp  server.hpp
aerial_player_cpp/src/cli/: CMakeLists.txt  README.md  main.cpp
aerial_player_cpp/src/cli/res/: aerial.rc
aerial_player_cpp/src/core/: CMakelists.txt  Config.cpp  Config.hpp  DB.cpp  DB.hpp  Engine.h  Player.cpp  Player.hpp  Playlist.hpp  Stats.cpp
aerial_player_cpp/src/ui_desktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.hpp  main.cpp
aerial_player_cpp/src/ui_dj/: CMakeLists.txt  DeckWidget.cpp  DeckWidget.h  LibraryWidget.cpp  MainWindow.cpp  MixerWidget.h
aerial_player_cpp/src/ui_qt/: CMakeLists.txt  LibraryWidget.h  MainWindow.h  MixerWidget.cpp
aerial_player_cpp/src/ui_videoEditor/: CMakeLists.txt
